===================================
Leeway Changelog
===================================

Version 1.1.9
-----------------------------------
[updated] flexlider to version 2.6.0

Version 1.1.8
-----------------------------------
[added] support for Jetpack Infinite Scroll feature
[fixed] some minor CSS styling bugs

Version 1.1.7
-----------------------------------
[added] previous/next post navigation on single post view
[removed] extract() function from widget files for better readable code
[changed] all themezee.com links to https and made them translatable

Version 1.1.6
-----------------------------------
[added] support for ThemeZee Related Posts plugin
[added] custom header image settings
[added] theme links in theme options panel
[added] category and tag descriptions on archive template

Version 1.1.5
-----------------------------------
[added] basic support for wooCommerce
[added] support for ThemeZee Breadcrumbs plugin
[added] email icon to social menu
[removed] empty spaces at the end of template files
[fixed] styling of 404 template

Version 1.1.4
-----------------------------------
[added] Post Slider page template
[changed] all h2 post and page titles to h1 for better SEO
[fixed] postmeta styling for widget bundle

Version 1.1.3
-----------------------------------
[added] escaping for translation strings for improved security

Version 1.1.2
-----------------------------------
[added] postmeta setting to Category Posts Boxed widget
[added] postmeta setting to Category Posts Columns widget
[added] postmeta setting to Category Posts Grid widget

Version 1.1.1
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin
[removed] fallback solution for new title tag feature of WordPress
[removed] function_exists wrappers for action hook functions
[changed] implementation of threaded comments javascript

Version 1.1.0