@@ -9,7 +9,8 @@
 
 #customize-control-leeway_control_postmeta_headline,
 #customize-control-leeway_control_post_footer_headline,
-#customize-control-leeway_control_slider_activated   {
+#customize-control-leeway_control_slider_activated,
+#customize-control-leeway_theme_options-slider_speed   {
 	margin-top: 16px;
 }
 
