@@ -8,9 +8,9 @@
  */
 
 // Passing Variables to Featured Post Slider Slider ( js/slider.js)
-add_action('wp_enqueue_scripts', 'leeway_custom_slider_params');
+add_action( 'wp_enqueue_scripts', 'leeway_custom_slider_params' );
 
-if ( ! function_exists( 'leeway_custom_slider_params' ) ):
+if ( ! function_exists( 'leeway_custom_slider_params' ) ) :
 
 function leeway_custom_slider_params() { 
 	
@@ -21,15 +21,13 @@ function leeway_custom_slider_params() {
 	$params = array();
 	
 	// Define Slider Animation
-	if( isset($theme_options['slider_animation']) ) :
-		$params['animation'] = esc_attr($theme_options['slider_animation']);
-	endif;
+	$params['animation'] = $theme_options['slider_animation'];
+	
+	// Define Slider Speed
+	$params['speed'] = $theme_options['slider_speed'];
 	
 	// Passing Parameters to Javascript
 	wp_localize_script( 'leeway-post-slider', 'leeway_slider_params', $params );
 }
 
 endif;
-
-
-?>
