@@ -7,6 +7,7 @@ jQuery(document).ready(function($) {
 	/* Add flexslider to #post-slider div */ 
 	$("#post-slider").flexslider({
 		animation: leeway_slider_params.animation,
+		slideshowSpeed: leeway_slider_params.speed,
 		namespace: "zeeflex-",
 		selector: ".zeeslides > li",
 		smoothHeight: true,
